By Val Shkolnikov <val@nvsoft.net>

* Added a fixed request rate feature.
  It is a bit risky feature, but "Navigare necesse est ..."

By Val Shkolnikov <val@nvsoft.net>
* Directed operational statistics into a file with the extension .ops
* Added DUMP_OPSTATS and RUN_TIME options.
* Added time stamp to the .log file, streamlined logging using macros.
* Added a second -v option for varied level of logging detail.


* Renamed function getline to get_line since folks from RedHat are 
   polluting the namespace. Thanks to jari pietila <jari2004@hotmail.com>
   for reporting that.

* Fixed x86_64 arch related bug in parse_conf.c Thanks to nobody/anonymous.


version 0.49, unstable, July 5, 2009, svn 561

* Corrected weirdness in parse_conf.c Thanks to nobody/anonymous.

* Making of libcurl without support for SSH. Some platforms do not
   have libssh2 installed and it breaks our build.

* Post an XML-file as a body of POST request.
  An example of configuration file is conf-examples/post-xml.conf, where the XML-file itself is
  residing in the same configuration directory, namely conf-examples/some.xml
  The majic is now done by:
  REQUEST_TYPE=POST
  MULTIPART_FORM_DATA="file=@some.xml"

* Advanced to libevent-1.4.11-stable, which fixes several nastry epoll bugs.


version 0.48, unstable, April 9, 2009, svn 556

* Advanced to curl version 19.4 with several bugfixes in the area
  of multi-handle transfers, HTTPS, FTP/S and cookies handling.

* Work-around for the bug involving reading from file and using fgets,
   when gcc-4.3 is used with optimization. It is done by compiling the file
   parse_conf.c without optimization. Since the functionality of the file 
   matters only for reading configuration upon start, it is not supposed
   to impact performance.

* Added -x command-line option to let explicitly specify a proxy server. 
  By using the curl-loader option -x, curl-loader can be
  forced to set or unset a proxy independend of .curlrc and environment, making the